%% Pre-defined commands: \R, \code, \acronym, \url, \file, \pkg
%% Since R 3.2.0, there are some additional system Rd macros available,
%% e.g., \CRANpkg and \doi. See the definitions in the file
%% file.path(R.home("share"), "Rd", "macros", "system.Rd")

\name{NEWS}
\title{News for Package 'biostatUZH'}

\section{Changes in biostatUZH version 1.5.0 (2015-02-11)}{
  \itemize{
    \item New function \code{formatCI()}, a re-implementation of
    \code{displayCI()} from package \pkg{reporttools}.
    \item Bugfix in \code{confIntAUC()}: the argument \code{conf.level}
    was ignored when calculating Wilson confidence intervals for
    specificity, sensitivity, PPV, and NPV.
    \item \code{tableRegression()} ...
    \itemize{
      \item supports negative binomial models fit by \code{glm.nb} from
      package \pkg{MASS}.
      \item passes additional arguments to \code{print.xtable} and
      sanitizes row names by default.
    }
    \item Migrated package development to the R-Forge project \dQuote{ebuzh}.
    \item Accommodated R CMD check issues.
    \item Updated institute name.
    \item Standardized \file{NEWS} file format.
    \item The \pkg{boot} and \pkg{reporttools} packages are no longer
    automatically attached when attaching package \pkg{biostatUZH}. 
  }
}

\section{Changes in biostatUZH version 1.4.9 (2014-04-15)}{
  \itemize{
    \item Bugfix in \code{confIntIndependentProportion()}: the Newcombe interval
    was wrong due to wrong internal use of the \code{conf.level} argument
    (spotted by Andrea Kraus). The bug was probably introduced in
    version 1.1.0, when all \code{alpha} arguments were changed to
    \code{conf.level}.
  }
}

\section{Changes in biostatUZH version 1.4.8 (2013-11-21)}{
  \itemize{
    \item improved code and doc of \code{formatPval()} and \code{logit()}
    \item fixed \file{NAMESPACE} issues
    \item moved most packages from Depends and Imports to Suggests